--- a/index.html
+++ b/index.html
@@ -7,5 +7,50 @@
   </head>
   <body>
 
+    <!-- intestazione -->
+    <header>
+
+
+    </header>
+    <!-- fine intestazione -->
+
+    <!-- parte centrale -->
+    <main>
+
+      <!-- sezione 1 -->
+      <section>
+
+      </section>
+      <!-- fine sezione 1 -->
+
+      <!-- sezione 2 -->
+      <section>
+
+      </section>
+      <!-- fine sezione 2 -->
+
+      <!-- sezione 3 -->
+      <section>
+
+      </section>
+      <!-- fine sezione 3 -->
+
+      <!-- sezione 4 -->
+      <section>
+
+      </section>
+      <!-- fine sezione 4 -->
+
+
+    </main>
+    <!-- fine parte centrale -->
+
+    <!-- piè di pagina -->
+    <footer>
+      
+
+    </footer>
+    <!-- fine piè di pagina -->
+
   </body>
 </html>
