--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
     <!-- intestazione -->
     <header>
+      <div class="container">
 
+      </div>
 
     </header>
     <!-- fine intestazione -->
@@ -19,24 +21,36 @@
 
       <!-- sezione 1 -->
       <section>
+        <div class="container">
+
+        </div>
 
       </section>
       <!-- fine sezione 1 -->
 
       <!-- sezione 2 -->
       <section>
+        <div class="container">
+
+        </div>
 
       </section>
       <!-- fine sezione 2 -->
 
       <!-- sezione 3 -->
       <section>
+        <div class="container">
+
+        </div>
 
       </section>
       <!-- fine sezione 3 -->
 
       <!-- sezione 4 -->
       <section>
+        <div class="container">
+
+        </div>
 
       </section>
       <!-- fine sezione 4 -->
@@ -47,7 +61,10 @@
 
     <!-- piè di pagina -->
     <footer>
-      
+      <div class="container">
+
+      </div>
+
 
     </footer>
     <!-- fine piè di pagina -->
