--- a/index.html
+++ b/index.html
@@ -4,16 +4,28 @@
     <meta charset="utf-8">
     <title>hubspot</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,300&display=swap" rel="stylesheet">
   </head>
   <body>
 
     <!-- intestazione -->
     <header>
       <div class="container">
+        <div id="opzioni">
 
+        </div>
       </div>
 
     </header>
+
+    <nav>
+      <div class="container">
+        <div id="link">
+
+        </div>
+      </div>
+
+    </nav>
     <!-- fine intestazione -->
 
     <!-- parte centrale -->
@@ -22,6 +34,9 @@
       <!-- sezione 1 -->
       <section>
         <div class="container">
+          <div id="testoprimasez">
+
+          </div>
 
         </div>
 
@@ -31,6 +46,29 @@
       <!-- sezione 2 -->
       <section>
         <div class="container">
+          <div id="cubo">
+
+          </div>
+
+          <div id="freehubspot">
+
+          </div>
+
+          <div class="floatsecondasez clearfix">
+            <div id="marketing">
+
+            </div>
+
+            <div id="sales">
+
+            </div>
+
+            <div id="service">
+
+            </div>
+
+          </div>
+
 
         </div>
 
@@ -41,6 +79,39 @@
       <section>
         <div class="container">
 
+          <div id="testoterzasez">
+
+          </div>
+
+          <div class="floatterzasez clearfix">
+
+            <div class="riquadro">
+
+            </div>
+            <div class="riquadro">
+
+            </div>
+            <div class="riquadro">
+
+            </div>
+            <div class="riquadro">
+
+            </div>
+            <div class="riquadro">
+
+            </div>
+            <div class="riquadro">
+
+            </div>
+            <div class="riquadro">
+
+            </div>
+            <div class="riquadro">
+
+            </div>
+
+          </div>
+
         </div>
 
       </section>
@@ -49,6 +120,30 @@
       <!-- sezione 4 -->
       <section>
         <div class="container">
+
+            <div class="row1 clearfix">
+              <div class="riquadrotesto">
+
+              </div>
+
+              <div class="riquadroimmagine">
+
+              </div>
+
+            </div>
+
+            <div class="row1 clearfix">
+              <div class="riquadrotesto">
+
+              </div>
+
+              <div class="riquadroimmagine">
+
+              </div>
+
+            </div>
+
+        </div>
 
         </div>
 
@@ -62,8 +157,29 @@
     <!-- piè di pagina -->
     <footer>
       <div class="container">
+        <div class="floatfooter clearfix">
+          <div class="lista">
+
+          </div>
+          <div class="lista">
+
+          </div>
+          <div class="lista">
+
+          </div>
+          <div class="lista">
+
+          </div>
+
+        </div>
+
+        <div id="testofooter">
+
+        </div>
+
 
       </div>
+
 
 
     </footer>
