--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>hubspot</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@800&display=swap" rel="stylesheet">
   </head>
   <body>
 
@@ -32,9 +32,21 @@
     <main>
 
       <!-- sezione 1 -->
-      <section>
+      <section id="prima">
+        
         <div class="container">
+
           <div id="testoprimasez">
+
+            <p>There's a better way to <br> grow.</p>
+
+            <p>Marketing, sales, and service software that helps your business grow without <br> compromise. Because "good for the business" should also mean "good for the <br> customer."</p>
+
+            <div id="linkprimasez">
+              <a href="#"><span>GetHubspotFree</span></a>
+            </div>
+
+            <p>Get started with FREE tools, and upgrade as you grow.</p>
 
           </div>
 
