--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>hubspot</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
   </head>
   <body>
 
@@ -33,7 +34,7 @@
 
       <!-- sezione 1 -->
       <section id="prima">
-        
+
         <div class="container">
 
           <div id="testoprimasez">
@@ -56,13 +57,38 @@
       <!-- fine sezione 1 -->
 
       <!-- sezione 2 -->
-      <section>
+      <section id="seconda">
         <div class="container">
-          <div id="cubo">
 
+          <div id="cubo">
+            <img src="img/cube.png" alt="cubo hubspot">
+            <p>Powerful Alone. Better Together</p>
+            <p>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its <br> core. They're powerful alone - but even better when used together.</p>
           </div>
 
           <div id="freehubspot">
+
+            <div id="primofloatsecondasez" class="clearfix">
+              <div id="libro">
+                <img src="img/CRM-Illustration.svg" alt="libro hubspot">
+                <div id="linksecondasez">
+                  <a href="#"><span>Learn More</span></a>
+                </div>
+              </div>
+
+              <div id="testofreehub">
+                <p>Free HubSpot CRM</p>
+                <p>Everything you need to organize, track, and build better relationships with leads and <br> customers. Yes, it's 100% free. Forever.</p>
+                <p>POPOLAR FEATURE</p>
+                
+                <i class="fas fa-check-circle"> Contact Insight</i>
+                <i class="fas fa-check-circle"> Deals</i>
+                <i class="fas fa-check-circle"> Task</i>
+              </div>
+
+            </div>
+
+
 
           </div>
 
