--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
           <div id="testoprimasez">
 
-            <p>There's a better way to <br> grow.</p>
+            <p>There's a better way to grow.</p>
 
-            <p>Marketing, sales, and service software that helps your business grow without <br> compromise. Because "good for the business" should also mean "good for the <br> customer."</p>
+            <p class="secondotesto">Marketing, sales, and service software that helps your business grow without compromise. Because "good for the business" should also mean "good for the customer."</p>
 
             <div id="linkprimasez">
               <a href="#"><span>GetHubspotFree</span></a>
@@ -63,46 +63,89 @@
           <div id="cubo">
             <img src="img/cube.png" alt="cubo hubspot">
             <p>Powerful Alone. Better Together</p>
-            <p>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its <br> core. They're powerful alone - but even better when used together.</p>
+            <p class="secondotesto">HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They're powerful alone - but even better when used together.</p>
           </div>
 
           <div id="freehubspot">
-
             <div id="primofloatsecondasez" class="clearfix">
               <div id="libro">
                 <img src="img/CRM-Illustration.svg" alt="libro hubspot">
-                <div id="linksecondasez">
+                <div class="linksecondasez">
                   <a href="#"><span>Learn More</span></a>
                 </div>
               </div>
 
               <div id="testofreehub">
-                <p>Free HubSpot CRM</p>
-                <p>Everything you need to organize, track, and build better relationships with leads and <br> customers. Yes, it's 100% free. Forever.</p>
-                <p>POPOLAR FEATURE</p>
-                
-                <i class="fas fa-check-circle"> Contact Insight</i>
-                <i class="fas fa-check-circle"> Deals</i>
-                <i class="fas fa-check-circle"> Task</i>
+                <p class="primotesto">Free HubSpot CRM</p>
+                <p class="secondotesto">Everything you need to organize, track, and build better relationships with leads and customers. Yes, it's 100% free. Forever.</p>
+                <p class="terzotesto">POPOLAR FEATURE</p>
+
+                <i class="fas fa-check-circle"> </i> <span class="secondotesto">Contact Insight</span>
+                <i class="fas fa-check-circle"> </i> <span class="secondotesto">Deals</span>
+                <i class="fas fa-check-circle"> </i> <span class="secondotesto">Task</span>
               </div>
-
             </div>
-
-
-
           </div>
 
           <div class="floatsecondasez clearfix">
-            <div id="marketing">
+            <div class="terzofloat marketing">
+              <div class="floatcontainer">
+                <img src="img/Marketing-Hub-Free.svg">
+                <p class="primotesto">Marketing Hub</p>
+                <p class="secondotesto">Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
+                <hr>
+                <p class="terzotesto">POPOLAR FEATURE</p>
 
+                <div class="check">
+                  <i class="fas fa-check-circle"> </i><span class="secondotesto">Lead Generation</span><br>
+                  <i class="fas fa-check-circle"> </i><span class="secondotesto">Marketing Automation</span><br>
+                  <i class="fas fa-check-circle"> </i><span class="secondotesto">Analytics</span>
+                </div>
+
+                <div class="linksecondasez">
+                  <a href="#"><span>Learn More</span></a>
+                </div>
+              </div>
             </div>
 
-            <div id="sales">
+            <div class="terzofloat sales">
+              <div class="floatcontainer">
+                <img src="img/Sales-Professional-Illustration.svg">
+                <p class="primotesto">Sales Hub</p>
+                <p class="secondotesto">Time-saving sales software that helps you get deeper insights into prospects, automate the tasks you hate, and close more deals faster.</p>
+                <hr>
+                <p class="terzotesto">POPOLAR FEATURE</p>
 
+                <div class="check">
+                  <i class="fas fa-check-circle"> </i><span class="secondotesto">Email Tracking</span><br>
+                  <i class="fas fa-check-circle"> </i><span class="secondotesto">Meeting Scheduling</span><br>
+                  <i class="fas fa-check-circle"> </i><span class="secondotesto">Email Automation</span>
+                </div>
+
+                <div class="linksecondasez">
+                  <a href="#"><span>Learn More</span></a>
+                </div>
+              </div>
             </div>
 
-            <div id="service">
+            <div class="terzofloat service">
+              <div class="floatcontainer">
+                <img src="img/Service-Hub-Illustration.svg">
+                <p class="primotesto">Service Hub</p>
+                <p class="secondotesto">Customer service software to help you connect with customers, exceed expectations, and turn them into promoters that grow your business.</p>
+                <hr>
+                <p class="terzotesto">POPOLAR FEATURE</p>
 
+                <div class="check">
+                  <i class="fas fa-check-circle"> </i><span class="secondotesto">Tickets</span><br>
+                  <i class="fas fa-check-circle"> </i><span class="secondotesto">Customer Feedback</span><br>
+                  <i class="fas fa-check-circle"> </i><span class="secondotesto">Knowledge Base</span>
+                </div>
+
+                <div class="linksecondasez">
+                  <a href="#"><span>Learn More</span></a>
+                </div>
+              </div>
             </div>
 
           </div>
