--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
       <!-- sezione 2 -->
       <section id="seconda">
         <div class="container">
-
           <div id="cubo">
             <img src="img/cube.png" alt="cubo hubspot">
             <p>Powerful Alone. Better Together</p>
@@ -147,12 +146,8 @@
                 </div>
               </div>
             </div>
-
           </div>
-
-
         </div>
-
       </section>
       <!-- fine sezione 2 -->
 
@@ -161,6 +156,8 @@
         <div class="container">
 
           <div id="testoterzasez">
+            <p>Learn and grow with award-winning support and a thriving community behind you.</p>
+            <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSport's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>          
 
           </div>
 
