--- a/index.html
+++ b/index.html
@@ -152,41 +152,65 @@
       <!-- fine sezione 2 -->
 
       <!-- sezione 3 -->
-      <section>
+      <section id="terza">
         <div class="container">
 
           <div id="testoterzasez">
             <p>Learn and grow with award-winning support and a thriving community behind you.</p>
-            <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSport's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>          
+            <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSport's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
 
           </div>
 
           <div class="floatterzasez clearfix">
 
-            <div class="riquadro">
-
+            <div class="riquadro des">
+              <img src="img/1.svg" alt=""><br>
+              <span id="primospan">150+</span><br>
+              <span id="secondospan">HubSpot user groups</span>
             </div>
-            <div class="riquadro">
 
+            <div class="riquadro des">
+              <img src="img/2.svg" alt=""><br>
+              <span id="primospan">150+</span><br>
+              <span id="secondospan">HubSpot user groups</span>
             </div>
-            <div class="riquadro">
 
+            <div class="riquadro des">
+              <img src="img/3.svg" alt=""><br>
+              <span id="primospan">150+</span><br>
+              <span id="secondospan">HubSpot user groups</span>
             </div>
-            <div class="riquadro">
 
-            </div>
             <div class="riquadro">
-
+              <img src="img/4.svg" alt=""><br>
+              <span id="primospan">150+</span><br>
+              <span id="secondospan">HubSpot user groups</span>
             </div>
-            <div class="riquadro">
 
+            <div class="riquadro row2 des">
+              <img id="marketplace" src="img/5.webp" alt=""><br>
+              <span id="primospan">150+</span><br>
+              <span id="secondospan">HubSpot user groups</span>
             </div>
-            <div class="riquadro">
 
+            <div class="riquadro row2 des">
+              <img src="img/6.svg" alt=""><br>
+              <span id="primospan">150+</span><br>
+              <span id="secondospan">HubSpot user groups</span>
             </div>
-            <div class="riquadro">
 
+            <div class="riquadro row2 des">
+              <img src="img/7.svg" alt=""><br>
+              <span id="primospan">150+</span><br>
+              <span id="secondospan">HubSpot user groups</span>
             </div>
+
+            <div class="riquadro row2">
+              <img id="group" src="img/8.svg" alt=""><br>
+              <span id="primospan">150+</span><br>
+              <span id="secondospan">HubSpot user groups</span>
+            </div>
+
 
           </div>
 
