--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <a href="#"><span>GetHubspotFree</span></a>
             </div>
 
-            <p>Get started with FREE tools, and upgrade as you grow.</p>
+            <p class="quartotesto">Get started with FREE tools, and upgrade as you grow.</p>
 
           </div>
 
@@ -205,26 +205,55 @@
       <!-- fine sezione 3 -->
 
       <!-- sezione 4 -->
-      <section>
+      <section id="quarta">
         <div class="container">
 
             <div class="row1 clearfix">
               <div class="riquadrotesto">
-
+                <span class="primotesto">64,500</span> <br>
+                <span class="secondotesto">customers in over <strong>100</strong> countries growing their businesses with HubSpot </span>
               </div>
 
-              <div class="riquadroimmagine">
-
+              <div class="loghi2 clearfix">
+                <div class="">
+                  <img src="img/Atlassian.webp" alt="">
+                </div>
+                <div class="">
+                  <img src="img/doordash.webp" alt="">
+                </div>
+                <div class="">
+                  <img src="img/g2crowd.webp" alt="">
+                </div>
+                <div class="">
+                  <img src="img/surveymonkey.svg" alt="">
+                </div>
+                <div class="">
+                  <img src="img/Subaru.webp" alt="">
+                </div>
+                <div class="">
+                  <img src="img/Wistia.webp" alt="">
+                </div>
+                <div class="">
+                  <img src="img/Classpass.webp" alt="">
+                </div>
+                <div class="">
+                  <img src="img/VMware.webp" alt="">
+                </div>
               </div>
-
             </div>
 
-            <div class="row1 clearfix">
+            <div class="row3 clearfix">
               <div class="riquadrotesto">
-
+                <p class="primotesto">Start Growing With HubSpot Today</p>
+                <p class="secondotesto">With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
+                <div id="linkprimasez">
+                  <a href="#"><span>GetHubspotFree</span></a>
+                </div>
+                <p class="quartotesto">Get started with FREE tools, and upgrade as you grow.</p>
               </div>
 
-              <div class="riquadroimmagine">
+              <div id="riquadroimmagine">
+                <img src="img/woman.webp" alt="">
 
               </div>
 
