Pericolo interruzione internet

--- a/index.html
+++ b/index.html
@@ -254,19 +254,14 @@
 
               <div id="riquadroimmagine">
                 <img src="img/woman.webp" alt="">
-
               </div>
-
             </div>
-
         </div>
 
         </div>
 
       </section>
       <!-- fine sezione 4 -->
-
-
     </main>
     <!-- fine parte centrale -->
 
@@ -275,21 +270,66 @@
       <div class="container">
         <div class="floatfooter clearfix">
           <div class="lista">
-
+            <p>Increase Your Traffic</p>
+            <p><a href="#">Ad Software</a></p>
+            <p><a href="#">Blog Software</a></p>
+            <p><a href="#">SEO Software</a></p>
+            <p><a href="#">Social Media Software</a></p>
+            <p><a href="#">Content Management System</a></p>
           </div>
           <div class="lista">
-
+            <p>Connect With Leads</p>
+            <p><a href="#">Find New Prospects</a></p>
+            <p><a href="#">Email Tracking</a></p>
+            <p><a href="#">Sales Email Templates</a></p>
+            <p><a href="#">Click to Call Your Leads</a></p>
+            <p><a href="#">Email Marketing</a></p>
           </div>
           <div class="lista">
-
+            <p>Close and Manage Leads</p>
+            <p><a href="#">Document Tracking Tool</a></p>
+            <p><a href="#">Meeting Schedule Tool</a></p>
+            <p><a href="#">Sales Automation Tool</a></p>
+            <p><a href="#">Lead Management Tool</a></p>
+            <p><a href="#">Pipeline Management Tool</a></p>
           </div>
           <div class="lista">
+            <p>Support and Tools</p>
+            <p><a href="#">HubSpot Partners</a></p>
+            <p><a href="#">Join a Local User Group</a></p>
+            <p><a href="#">Get a Free Website Report</a></p>
+            <p><a href="#">HubSpot Templates</a></p>
+            <p><a href="#">Free Tools & Generators</a></p>
+            <p id="bottone"><a href="#">Contact HubSpot Support</a></p>
+            <div id="social">
+              <i class="fab fa-facebook-f"></i>
+              <i class="fab fa-instagram"></i>
+              <i class="fab fa-youtube"></i>
+              <i class="fab fa-twitter"></i>
+              <i class="fab fa-linkedin-in"></i>
+            </div>
 
           </div>
 
         </div>
 
         <div id="testofooter">
+          <div id="lingue">
+            <a href="#">English</a>
+            <a href="#">Deutsch</a>
+            <a href="#">日本語</a>
+            <a href="#">Espanol</a>
+            <a href="#">Portugues</a>
+            <a href="#">Francais</a>
+          </div>
+
+          <div id="finale">
+            <div id="logofinale">
+
+            </div>
+
+          </div>
+
 
         </div>
 
