--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
             <p><a href="#">Get a Free Website Report</a></p>
             <p><a href="#">HubSpot Templates</a></p>
             <p><a href="#">Free Tools & Generators</a></p>
-            <p id="bottone"><a href="#">Contact HubSpot Support</a></p>
+            <div id="bottone"><a href="#">Contact HubSpot Support</a></div>
             <div id="social">
               <i class="fab fa-facebook-f"></i>
               <i class="fab fa-instagram"></i>
@@ -308,36 +308,29 @@
               <i class="fab fa-twitter"></i>
               <i class="fab fa-linkedin-in"></i>
             </div>
-
           </div>
-
         </div>
-
         <div id="testofooter">
           <div id="lingue">
             <a href="#">English</a>
             <a href="#">Deutsch</a>
             <a href="#">日本語</a>
-            <a href="#">Espanol</a>
-            <a href="#">Portugues</a>
-            <a href="#">Francais</a>
+            <a href="#">Espa&ntilde;ol</a>
+            <a href="#">Portugu&ecirc;s</a>
+            <a href="#">Fran&ccedil;ais</a>
           </div>
-
-          <div id="finale">
+          <div class="finale clearfix">
             <div id="logofinale">
-
+              <img src="img/logohubspot.svg" alt="">
+              <p>Copyright 2019 HubSpot, Inc.</p>
             </div>
-
+            <div id="legale">
+              <a href="#">Legal Stuff</a>
+              <a href="#">Privacy Policy</a>
+            </div>
           </div>
-
-
         </div>
-
-
       </div>
-
-
-
     </footer>
     <!-- fine piè di pagina -->
 
