--- a/index.html
+++ b/index.html
@@ -11,22 +11,47 @@
 
     <!-- intestazione -->
     <header>
-      <div class="container">
-        <div id="opzioni">
-
+      <nav id=primonav>
+        <div class="container">
+            <div class="opzioni clearfix">
+              <div id="contatti">
+                <a href="#"><i class="fas fa-globe-europe"></i>English <i class="fas fa-chevron-down"></i></a>
+                <a href="#">Contact Us</a>
+              </div>
+              <div id="info">
+                <a href="#"><i class="fas fa-search"></i></a>
+                <a href="#">Log in</a>
+                <a href="#">GetHubspotFree</a>
+              </div>
+            </div>
         </div>
-      </div>
+      </nav>
+
+      <nav id=secondonav>
+        <div class="container">
+            <div class="opzioni clearfix">
+              <div id="logoiniziale">
+                <img src="img/logo.svg" alt="">
+              </div>
+              <div id="infolink">
+                <a href="#">Software <i class="fas fa-chevron-down"></i></a>
+                <a href="#">Pricing</a>
+                <a href="#">Resources <i class="fas fa-chevron-down"></i></a>
+                <a href="#">Partners <i class="fas fa-chevron-down"></i></a>
+                <a href="#">About <i class="fas fa-chevron-down"></i></a>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </nav>
+
+
+
 
     </header>
 
-    <nav>
-      <div class="container">
-        <div id="link">
 
-        </div>
-      </div>
-
-    </nav>
     <!-- fine intestazione -->
 
     <!-- parte centrale -->
