--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
 
     <!-- intestazione -->
-    <header>
-      <nav id=primonav>
+    <!-- <header> -->
+      <nav id="primonav">
         <div class="container">
             <div class="opzioni clearfix">
               <div id="contatti">
@@ -27,7 +27,7 @@
         </div>
       </nav>
 
-      <nav id=secondonav>
+      <nav class="secondonav sticky">
         <div class="container">
             <div class="opzioni clearfix">
               <div id="logoiniziale">
@@ -49,9 +49,7 @@
 
 
 
-    </header>
-
-
+    <!-- </header> -->
     <!-- fine intestazione -->
 
     <!-- parte centrale -->
