--- a/index.html
+++ b/index.html
@@ -325,11 +325,11 @@
             <p><a href="#">Free Tools & Generators</a></p>
             <div id="bottone"><a href="#">Contact HubSpot Support</a></div>
             <div id="social">
-              <i class="fab fa-facebook-f"></i>
-              <i class="fab fa-instagram"></i>
-              <i class="fab fa-youtube"></i>
-              <i class="fab fa-twitter"></i>
-              <i class="fab fa-linkedin-in"></i>
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="#"><i class="fab fa-youtube"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-linkedin-in"></i></a>
             </div>
           </div>
         </div>
