--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 
     <!-- intestazione -->
-    <!-- <header> -->
+    <header>
       <nav id="primonav">
         <div class="container">
             <div class="opzioni clearfix">
@@ -45,11 +45,9 @@
           </div>
         </div>
       </nav>
+    </header>
 
-
-
-
-    <!-- </header> -->
+    
     <!-- fine intestazione -->
 
     <!-- parte centrale -->
