--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
   </head>
   <body>
-
     <!-- intestazione -->
     <header>
       <nav id="primonav">
@@ -41,18 +40,14 @@
                 <a href="#">About <i class="fas fa-chevron-down"></i></a>
               </div>
             </div>
-
           </div>
         </div>
       </nav>
     </header>
-
-    
     <!-- fine intestazione -->
 
     <!-- parte centrale -->
     <main>
-
       <!-- sezione 1 -->
       <section id="prima">
 
@@ -187,38 +182,38 @@
             </div>
             <div class="riquadro des">
               <img src="img/2.svg" alt=""><br>
-              <span id="primospan">150+</span><br>
-              <span id="secondospan">HubSpot user groups</span>
+              <span id="primospan">4.5M+</span><br>
+              <span id="secondospan">monthly visits</span>
             </div>
             <div class="riquadro des">
               <img src="img/3.svg" alt=""><br>
-              <span id="primospan">150+</span><br>
-              <span id="secondospan">HubSpot user groups</span>
+              <span id="primospan">155K+</span><br>
+              <span id="secondospan">certified professionals</span>
             </div>
             <div class="riquadro">
               <img src="img/4.svg" alt=""><br>
-              <span id="primospan">150+</span><br>
-              <span id="secondospan">HubSpot user groups</span>
+              <span id="primospan">21K+</span><br>
+              <span id="secondospan">registered attendees</span>
             </div>
             <div class="riquadro row2 des">
               <img id="marketplace" src="img/5.webp" alt=""><br>
-              <span id="primospan">150+</span><br>
-              <span id="secondospan">HubSpot user groups</span>
+              <span id="primospan">200+</span><br>
+              <span id="secondospan">Integrations</span>
             </div>
             <div class="riquadro row2 des">
               <img src="img/6.svg" alt=""><br>
-              <span id="primospan">150+</span><br>
-              <span id="secondospan">HubSpot user groups</span>
+              <span id="primospan">6+</span><br>
+              <span id="secondospan">languages</span>
             </div>
             <div class="riquadro row2 des">
               <img src="img/7.svg" alt=""><br>
-              <span id="primospan">150+</span><br>
-              <span id="secondospan">HubSpot user groups</span>
+              <span id="primospan">2.6M+</span><br>
+              <span id="secondospan">social followers</span>
             </div>
             <div class="riquadro row2">
               <img id="group" src="img/8.svg" alt=""><br>
-              <span id="primospan">150+</span><br>
-              <span id="secondospan">HubSpot user groups</span>
+              <span id="primospan">5K+</span><br>
+              <span id="secondospan">profiles and counting</span>
             </div>
           </div>
         </div>
@@ -354,6 +349,5 @@
       </div>
     </footer>
     <!-- fine piè di pagina -->
-
   </body>
 </html>
