Correzione header e modifiche img

--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
               </div>
             </div>
           </div>
-        </div>
       </nav>
     </header>
     <!-- fine intestazione -->
@@ -231,28 +230,28 @@
               </div>
 
               <div class="loghi2 clearfix">
-                <div class="">
+                <div class="logo">
                   <img src="img/Atlassian.webp" alt="">
                 </div>
-                <div class="">
+                <div class="logo">
                   <img src="img/doordash.webp" alt="">
                 </div>
-                <div class="">
+                <div class="logo">
                   <img src="img/g2crowd.webp" alt="">
                 </div>
-                <div class="">
+                <div class="logo">
                   <img src="img/surveymonkey.svg" alt="">
                 </div>
-                <div class="">
+                <div class="logo">
                   <img src="img/Subaru.webp" alt="">
                 </div>
-                <div class="">
+                <div class="logo">
                   <img src="img/Wistia.webp" alt="">
                 </div>
-                <div class="">
+                <div class="logo">
                   <img src="img/Classpass.webp" alt="">
                 </div>
-                <div class="">
+                <div class="logo">
                   <img src="img/VMware.webp" alt="">
                 </div>
               </div>
